--- a/IAttend.API/IAttend.API.csproj
+++ b/IAttend.API/IAttend.API.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.4"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1"/>
   </ItemGroup>
   <ItemGroup>
     <DoteNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.0"/>
