--- a/IAttend.API/appsettings.json
+++ b/IAttend.API/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "ConnectionStrings" : {
-    "DefaultConnection" : "Data Source=IAttend.db"
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=IAttend.db",
+    "SQLServerConnection":"Data Source=DRPHLT00006\\DEVELOPERS;Initial Catalog=IAttend;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
