--- a/Student/iAttend.Student/iAttend.Student.UnitTests/packages.config
+++ b/Student/iAttend.Student/iAttend.Student.UnitTests/packages.config
@@ -3,4 +3,10 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="NUnit" version="3.6.1" targetFramework="net45" />
   <package id="NUnit3TestAdapter" version="3.11.0" targetFramework="net471" />
+  <package id="Prism.Core" version="7.1.0.431" targetFramework="net471" />
+  <package id="Prism.Forms" version="7.1.0.431" targetFramework="net471" />
+  <package id="Prism.Unity.Forms" version="7.1.0.431" targetFramework="net471" />
+  <package id="Unity.Abstractions" version="3.3.1" targetFramework="net471" />
+  <package id="Unity.Container" version="5.8.11" targetFramework="net471" />
+  <package id="Xamarin.Forms" version="3.2.0.839982" targetFramework="net471" />
 </packages>
