--- a/Student/iAttend.Student/iAttend.Student/iAttend.Student/iAttend.Student.csproj
+++ b/Student/iAttend.Student/iAttend.Student/iAttend.Student/iAttend.Student.csproj
@@ -23,6 +23,9 @@
     <Compile Update="Views\StudentLandingPage.xaml.cs">
       <DependentUpon>StudentLandingPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\StudentsAttendance.xaml.cs">
+      <DependentUpon>StudentsAttendance.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -41,7 +44,7 @@
     <EmbeddedResource Update="Views\TeacherLandingPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\TeachersStudentFilterPage.xaml">
+    <EmbeddedResource Update="Views\StudentsAttendance.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
