--- a/IAttend.API/appsettings.json
+++ b/IAttend.API/appsettings.json
@@ -1,7 +1,10 @@
 {
+  "AppSettings": {
+    "Token" :  "super sercret key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=IAttend.db",
-    "SQLServerConnection":"Data Source=DRPHLT00006\\DEVELOPERS;Initial Catalog=IAttend;Integrated Security=True"
+    "SQLServerConnection": "Data Source=DRPHLT00006\\DEVELOPERS;Initial Catalog=IAttend;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
