--- a/Student/iAttend.Student/iAttend.Student/iAttend.Student.Android/Properties/AndroidManifest.xml
+++ b/Student/iAttend.Student/iAttend.Student/iAttend.Student.Android/Properties/AndroidManifest.xml
@@ -5,5 +5,9 @@
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.FLASHLIGHT" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 	<application android:label="iAttend.Student.Android" android:icon="@mipmap/ic_launcher"></application>
 </manifest>
