--- a/Student/iAttend.Student/iAttend.Student/iAttend.Student/iAttend.Student.csproj
+++ b/Student/iAttend.Student/iAttend.Student/iAttend.Student/iAttend.Student.csproj
@@ -36,6 +36,9 @@
     <EmbeddedResource Update="Views\AbsentStatPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\AddSchedulePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\LoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
