--- a/IAttend.API/appsettings.json
+++ b/IAttend.API/appsettings.json
@@ -4,7 +4,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=IAttend.db",
-    "SQLServerConnection": "Data Source=DRPHLT00033\\SQLEXPRESS;Initial Catalog=IAttend;Integrated Security=True;"
+    "SQLServerConnection": "Data Source=DESKTOP-T721D0H\\SQLEXPRESS;Initial Catalog=IAttend;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
